# Pooh-V

./: .gitignore  README.md  cabal.project  flake.nix  pooh-v.cabal  riscv-rig.cabal
.github/workflows/: deploy-slides.yml
app/: Main.hs
app/CLI/: Options.hs  Runner.hs
docs/: nix-setup.md  pooh-v-slides.html  roadmap.md  running.md
docs/slides/: package-lock.json  package.json  slides.md
docs/superpowers/plans/: 2026-05-22-riscv-rig-phase1.md  2026-05-27-nix-packaging.md  2026-06-01-phase2-complete-isa-scenario.md  2026-06-02-phase3-coverage-optimizer.md  2026-06-02-phase4-vue3-dashboard.md
docs/superpowers/specs/: 2026-05-21-riscv-rig-design.md  2026-05-26-nix-packaging-design.md  2026-06-02-phase3-coverage-optimizer-design.md  2026-06-02-phase4-vue3-dashboard-design.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.vue  main.ts  types.ts
frontend/src/api/: client.ts
frontend/src/composables/: useSSE.test.ts  useSSE.ts
frontend/src/router/: index.ts
frontend/src/stores/: bandit.test.ts  bandit.ts  coverage.test.ts  coverage.ts
frontend/src/views/: BanditView.vue  ControlView.vue  CoverageView.vue  ScenariosView.vue
nix/: haskell.nix  spike.nix
src/API/: Server.hs  Types.hs
src/CoSim/: Batch.hs  Diff.hs  Oracle.hs  Sail.hs  Shrink.hs  Spike.hs  Types.hs
src/Constraint/: Combinators.hs  Library.hs  Solver.hs  Types.hs
src/Core/: CSR.hs  Decode.hs  Encode.hs  ExtDeps.hs  Instruction.hs  PMA.hs  Types.hs
src/Coverage/: Accumulator.hs  Analysis.hs  Bandit.hs  Classify.hs  Detector.hs  Types.hs
src/Coverage/Builtin/: Detectors.hs
src/ELF/: FlatBinary.hs
src/Generator/: Guided.hs  Random.hs  Seed.hs  Types.hs
src/Scenario/: Registry.hs  Types.hs
src/Scenario/Builtin/: LrscInterrupt.hs
test/: IntegrationSpec.hs  Spec.hs
test/Test/API/: Server.hs
test/Test/CoSim/: Shrink.hs  Spike.hs
test/Test/Constraint/: Solver.hs
test/Test/Core/: Atomic.hs  Compressed.hs  Decode.hs  Encode.hs  ExtDeps.hs  FloatInstr.hs  PMA.hs
test/Test/Coverage/: Accumulator.hs  Bandit.hs  Bins.hs  Classify.hs
test/Test/ELF/: FlatBinary.hs
test/Test/Generator/: Guided.hs  Random.hs
test/Test/Integration/: Smoke.hs
test/Test/Scenario/: Registry.hs
