cabal-version: 3.0
name:          riscv-rig
version:       0.1.0.0
synopsis:      RISC-V Random Instruction Generator with SMT constraint solving
license:       MIT
build-type:    Simple

common common-options
  default-language:   GHC2021
  ghc-options:        -Wall -Wcompat -Wincomplete-record-updates
                      -Wincomplete-uni-patterns -Wredundant-constraints
  default-extensions: OverloadedStrings
                      LambdaCase
                      TupleSections
                      ImportQualifiedPost

library
  import:          common-options
  hs-source-dirs:  src
  exposed-modules:
    Core.Types
    Core.Instruction
    Core.Encode
    Core.Decode
    Core.CSR
    Core.ExtDeps
    Core.PMA
    Constraint.Types
    Constraint.Solver
    Constraint.Library
    Constraint.Combinators
    Generator.Seed
    Generator.Types
    Generator.Random
    Generator.Guided
    Coverage.Types
    Coverage.Accumulator
    Coverage.Analysis
    Coverage.Bandit
    Coverage.Classify
    Coverage.Detector
    Coverage.Builtin.Detectors
    ELF.FlatBinary
    CoSim.Types
    CoSim.Oracle
    CoSim.Diff
    CoSim.Spike
    CoSim.Batch
    CoSim.Shrink
    CoSim.Sail
    Scenario.Types
    Scenario.Registry
    Scenario.Builtin.LrscInterrupt
    API.Types
    API.Server
  build-depends:
      base           >= 4.17  && < 5
    , text           >= 2.0
    , bytestring     >= 0.11
    , binary         >= 0.8
    , containers     >= 0.6
    , vector         >= 0.13
    , stm            >= 2.5
    , sbv            >= 10.2
    , hedgehog       >= 1.4
    , megaparsec     >= 9.6
    , time           >= 1.12
    , process        >= 1.6
    , temporary      >= 1.3
    , filepath       >= 1.4
    , directory      >= 1.3
    , random         >= 1.2
    , mwc-random     >= 0.15
    , servant-server >= 0.20
    , warp           >= 3.3
    , aeson          >= 2.1
    , wai-extra       >= 3.1
    , wai             >= 3.2
    , tagged          >= 0.8

executable riscv-rig
  import:          common-options
  hs-source-dirs:  app
  main-is:         Main.hs
  other-modules:
    CLI.Options
    CLI.Runner
  build-depends:
      base                 >= 4.17 && < 5
    , riscv-rig
    , optparse-applicative >= 0.18
    , text                 >= 2.0
    , containers           >= 0.6
    , stm                  >= 2.5
    , directory            >= 1.3
    , servant-server >= 0.20
    , warp           >= 3.3

test-suite riscv-rig-test
  import:          common-options
  type:            exitcode-stdio-1.0
  hs-source-dirs:  test
  main-is:         Spec.hs
  other-modules:
    Test.Core.Encode
    Test.Core.Decode
    Test.Core.Atomic
    Test.Core.FloatInstr
    Test.Core.Compressed
    Test.Constraint.Solver
    Test.Generator.Random
    Test.Coverage.Accumulator
    Test.Coverage.Bins
    Test.Coverage.Classify
    Test.ELF.FlatBinary
    Test.CoSim.Spike
    Test.Core.ExtDeps
    Test.Core.PMA
    Test.CoSim.Shrink
    Test.Scenario.Registry
    Test.Coverage.Bandit
    Test.Generator.Guided
    Test.API.Server
  build-depends:
      base           >= 4.17 && < 5
    , riscv-rig
    , hedgehog       >= 1.4
    , tasty          >= 1.4
    , tasty-hedgehog >= 1.4
    , tasty-hunit    >= 0.10
    , containers     >= 0.6
    , bytestring     >= 0.11
    , sbv            >= 10.2
    , stm            >= 2.5
    , text           >= 2.0
    , process        >= 1.6
    , mwc-random     >= 0.15
    , servant-server >= 0.20
    , aeson          >= 2.1

test-suite riscv-rig-integration
  import:          common-options
  type:            exitcode-stdio-1.0
  hs-source-dirs:  test
  main-is:         IntegrationSpec.hs
  other-modules:
    Test.Integration.Smoke
  build-depends:
      base           >= 4.17 && < 5
    , riscv-rig
    , tasty          >= 1.4
    , tasty-hunit    >= 0.10
    , process        >= 1.6
    , temporary      >= 1.3
